src/lib/snapshots/hemlis_lib__lexer__tests__block_comment2.snap
---
source: src/lexer.rs
expression: "p(\"a +{- this\\n is\\n a\\n comment\\n -}b\")"
---
Ok(Lower("a"))
Ok(Op("+"))
Ok(Lower("b"))
Ok(LayTop)
