src/lib/snapshots/hemlis_lib__lexer__tests__forall.snap
---
source: src/lexer.rs
expression: "p(\"forall f. Monad f => f a -> f Unit\")"
---
Ok(Lower("forall"))
Ok(Lower("f"))
Ok(Op("."))
Ok(Upper("Monad"))
Ok(Lower("f"))
Ok(RightFatArrow)
Ok(Lower("f"))
Ok(Lower("a"))
Ok(RightArrow)
Ok(Lower("f"))
Ok(Upper("Unit"))
Ok(LayTop)
