src/lib/snapshots/hemlis_lib__lexer__tests__funky_string.snap
---
source: src/lexer.rs
expression: "p(\"\\\"\\\"\")"
---
Ok(String("\"\u{f61a}\u{f61a}\u{f61a}\u{f61a}\u{f61a}\u{f61a}\u{f61a}\u{f61a}\u{f61a}\u{f61a}\u{f61a}\u{f61a}\u{f61a}\u{f61a}\u{f61a}\u{f61a}\""))
Ok(LayTop)
