src/lib/snapshots/hemlis_lib__lexer__tests__hole.snap
---
source: src/lexer.rs
expression: "p(\"a = ?foo 1 2\")"
---
Ok(Lower("a"))
Ok(Equals)
Ok(Hole("?foo"))
Ok(Number("1"))
Ok(Number("2"))
Ok(LayTop)
