src/lib/snapshots/hemlis_lib__lexer__tests__leaking_where.snap
---
source: src/lexer.rs
expression: "p(r#\"\nmodule A where\n\ninstance A A where\n  f = F\n\na :: A\na = 1\n        \"#)"
---
Ok(Lower("module"))
Ok(Upper("A"))
Ok(Where)
Ok(LayTop)
Ok(Instance)
Ok(Upper("A"))
Ok(Upper("A"))
Ok(Where)
Ok(LayBegin)
Ok(Lower("f"))
Ok(Equals)
Ok(Upper("F"))
Ok(LayEnd)
Ok(LayTop)
Ok(Lower("a"))
Ok(ColonColon)
Ok(Upper("A"))
Ok(LayTop)
Ok(Lower("a"))
Ok(Equals)
Ok(Number("1"))
Ok(LayTop)
