src/lib/snapshots/hemlis_lib__lexer__tests__line_comment.snap
---
source: src/lexer.rs
expression: "p(\"a + -- this is a comment\\nb\")"
---
Ok(Lower("a"))
Ok(Op("+"))
Ok(LayTop)
Ok(Lower("b"))
Ok(LayTop)
