src/lib/snapshots/hemlis_lib__lexer__tests__qual.snap
---
source: src/lexer.rs
expression: "p(\"A.B.Unit A.B.var A.B.### A.B....\")"
---
Ok(Qual("A.B."))
Ok(Upper("Unit"))
Ok(Qual("A.B."))
Ok(Lower("var"))
Ok(Qual("A.B."))
Ok(Op("###"))
Ok(Qual("A.B...."))
Ok(LayTop)
